[package]
name = "nu-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nu-parser = "0.104.0"
nu-engine = "0.104.0"
nu-protocol = "0.104.0"
nu-cmd-lang = "0.104.0"
nu-command = "0.104.0"
nu-cli = "0.104.0"
nu-std = "0.104.0"
anyhow       = "1.0"       # for easy error handling
nu-utils = "0.104.0"
nu-cmd-extra = "0.104.0"
nu-explore = "0.104.0"
nu-cmd-plugin = "0.104.0"
serde_json = "1.0.140"
serde = "1.0.219"
